add booked rooms dashboard

--- a/src/app/new-room-form/new-room-form.component.html
+++ b/src/app/new-room-form/new-room-form.component.html
@@ -18,6 +18,12 @@
       </label>
     </div>
     <div class="form-group">
+      <label>
+        Capacity
+        <input class="form-control" formControlName="capacity" type="number">
+      </label>
+    </div>
+    <div class="form-group">
       <button (click)="submitForm()" class="btn btn-dark">Create</button>
     </div>
   </form>
