--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
   <div class="navbar-nav">
-    <a [routerLink]="'/home'" class="nav-item nav-link">Home</a>
-    <a [routerLink]="'/rooms'" class="nav-item nav-link">Rooms</a>
+    <a routerLinkActive="active" routerLink="/home" class="nav-item nav-link">Home</a>
+    <a routerLinkActive="active" routerLink="/rooms" class="nav-item nav-link">Rooms</a>
+    <a routerLinkActive="active" routerLink="/booked" class="nav-item nav-link">Booked Rooms</a>
   </div>
   <button [routerLink]="'/new'" class="btn btn-success">
     Create a room
