--- a/src/app/rooms-dashboard/rooms-dashboard.component.html
+++ b/src/app/rooms-dashboard/rooms-dashboard.component.html
@@ -1,3 +1,3 @@
-<div class="card-columns">
+<div class="container card-columns">
   <app-room-card *ngFor="let room of allRooms" [room]="room"></app-room-card>
 </div>
