--- a/src/app/new-room-form/new-room-form.component.html
+++ b/src/app/new-room-form/new-room-form.component.html
@@ -8,8 +8,11 @@
     <div class="form-group">
       <label>
         Name
-        <input class="form-control" formControlName="name" type="text">
+        <input class="form-control" formControlName="name" type="text" required>
       </label>
+      <div class="text-danger" *ngIf="newRoomForm.controls['name'].errors && !newRoomForm.controls['name'].pristine">
+        Name is required!
+      </div>
     </div>
     <div class="form-group">
       <label>
@@ -30,5 +33,5 @@
 </div>
 
 <div style="visibility: hidden" class="alert alert-danger" role="alert" id="failure">
-  An error occurred!
+  {{errorMessage}}
 </div>
