--- a/src/app/rooms-dashboard/rooms-dashboard.component.html
+++ b/src/app/rooms-dashboard/rooms-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container text-danger" *ngIf="allRooms.length < 1">
+<div class="container text-danger" *ngIf="allRooms.length <= 0">
   <h3>No rooms at the moment.</h3>
 </div>
 
