--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,16 @@
-<div class="jumbotron">
-  HOME
+<div class="jumbotron bg-cool">
+  <h1 class="text-lg-center">WELCOME TO BOOKaROOM</h1>
+  <h5 class="text-md-center">
+    Book rooms and halls by clicking on 'Rooms'.
+  </h5>
+  <h5 class="text-md-center">
+    Create new rooms by clicking on the button in the upper right-hand corner.
+  </h5>
+  <h5 class="text-md-center">
+    Check which rooms are currently booked by clicking on 'Booked Rooms'.
+  </h5>
+</div>
+
+<div class="card-footer">
+  &copy; Created by Boyan Kushlev. June 2018.
 </div>
